[gd_scene load_steps=4 format=2]

[ext_resource path="res://SpawnerPortal.tscn" type="PackedScene" id=1]
[ext_resource path="res://DestroyerPortal.tscn" type="PackedScene" id=2]
[ext_resource path="res://PortalPair.gd" type="Script" id=3]

[node name="PortalPair" type="Spatial"]
script = ExtResource( 3 )

[node name="SpawnerPortal" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
target_node_path = NodePath("../DestroyerPortal")

[node name="DestroyerPortal" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )
[connection signal="destroyed_projectile" from="DestroyerPortal" to="." method="_on_DestroyerPortal_destroyed_projectile"]
